<resources>
    <string name="app_name">Application</string>
    <string name="textview">TextView</string>
    <string name="textview2">TextView2</string>
    <string name="edit">Edit</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_details">Enter Details</string>
    <string name="save_task">Save Task</string>
    <string name="delete_task">Delete Task</string>

</resources>